src/z80asm/z80asm2/t/05-cli/expected/at_files_05.txt
% z88dk-z80asm -v -dump-after-cmdline @t/05-cli//input/at_files_05.lst
t/05-cli/input/at_files_05.lst:4:3: error: File not found: file_not_found.asm
    		file_not_found.asm
    		^
t/05-cli/input/at_files_05.lst:5:5: error: File not found: file_not_found.lst
    	@ 	file_not_found.lst
    	  	^
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
verbose	1
cpu_id	z80
ucase_symbols	0
float_format	genmath
preprocess_only	0
swap_ix_iy	0
date_stamp	0
filler_byte	0
dump_after_cmdline	1
dump_after_tokenization	0
dump_after_directives	0
dump_after_macro_expansion	0
dump_after_hla_expansion	0
dump_after_synth_expansion	0
dump_after_preprocessing	0
dump_after_parse	0
m4_options	
perl_options	
cpp_options	
output_dir	
global_def	__CPU_Z80__	1
global_def	__CPU_ZILOG__	1
global_def	__FLOAT_GENMATH__	1
